--- a/jaldi5_tambola_housie/index.html
+++ b/jaldi5_tambola_housie/index.html
@@ -57,7 +57,8 @@
 
             if (joinGameButton && gameData) {
                 // Construct the base URL for your app link
-                const baseUrl = "https://luckeygems.swakaryam.in/jaldi5_tambola_housie";
+                // const baseUrl = "https://luckeygems.swakaryam.in/jaldi5_tambola_housie";
+                const baseUrl = "luckeygems://jaldi5_tambola_housie";
                 
                 // Set the button's href to include the extracted gameData
                 joinGameButton.href = `${baseUrl}?data=${gameData}`;
